--- a/EmpManager/src/main/resources/static/index.html
+++ b/EmpManager/src/main/resources/static/index.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>welcome</h1>
-    <h6>app running</h6>
+    <h4>app running</h4>
+    <form action="process-form" method="get">
+    <input type="text" name="num1">
+    <input type="text" name="num2">
+    <button type="submit">SUBMIT</button>
+</form>
 </body>
 </html>
